--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <p>El Document Object Model es una estructura de árbol que representará todos nuestros proyectos web como si un árbol
       genealógico fuera: padres, hijos, hermanos con niveles infinitos. cuando entendemos esta anidación podemos identificar
       dependencias, herencias en css y que tan complejo es nuestro proyecto.</p>
-      <img src="images/dom.png" alt="Estructura de arbol que representa al Document Object Model" title="Estructura de arbol que representa al Document Object Model">
+      <img src="images/dom-1.png" alt="Estructura de arbol que representa al Document Object Model" title="Estructura de arbol que representa al Document Object Model">
     <h3>Semántica</h3>
       <p>La semántica le brinda sentido a cada elemento existen en un sitio web, algunos elementos será meramente decorativos y
       no deben significar nada pero otros serán títulos y deberán estar en diferente jerarquías o alguna secciones serán más
